# greenatom

./: README.md  Untitled Diagram.drawio  data_scructure_spacex.drawio
.github/workflows/: ci.yml
SpaceX/: .gitignore  .pylintrc  alembic.ini  docker-compose.yml  pyproject.toml
SpaceX/app/api/: endpoints.py  main.py  routes.py
SpaceX/app/db/: base.py  config.py  container.py  models.py  session.py
SpaceX/app/db/data_layer/: abc.py  launch.py  mission.py  rocket.py
SpaceX/app/db/migrations/: env.py
SpaceX/app/db/migrations/versions/: c7d7ef10b07d_init.py
SpaceX/app/spacex/: db_handler.py  spacex_handler.py  spacex_queries.py
SpaceX/tests/: conftest.py  test_endpoints.py  test_spacex.py
tasks/: task_1.md  task_2.py  task_3.py  task_4.py  task_5.py
