[tool.poetry]
name = "spacex"
version = "0.1.0"
description = ""
authors = ["'Kimiyori'"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
environs = "^9.5.0"
alembic = "^1.9.3"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.3"}
dependency-injector = "^4.41.0"
gunicorn = "^20.1.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.0.0"
pylint = "^2.16.2"
flake8 = "^6.0.0"
black = "^23.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
